# watering_system

./: CMakeLists.txt  README.md  main.c  readme.md
include/: bme280.h  lcd_i2c.h  moisture_sensor.h  pico_internal.h  pico_rtc.h
src/: bme280.c  lcd_i2c.c  moisture_sensor.c  pico_internal.c  pico_rtc.c
